# vocprez-fedsearch

./: .gitignore  .pre-commit-config.yaml  README.md  bitbucket-pipelines.yml  fedsearch.py  pyproject.toml  test_fedsearch.py  test_rva.py
