[tool.poetry]
name = "fedsearch"
version = "0.1.0"
description = ""
authors = ["Nicholas Car <nicholas.car@surroundaustralia.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prettytable = "^2.2.1"
httpx = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
